Añadir joyeria con hibernate